<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="32dp"
        android:paddingTop="16dp" />

    <!--Displays the text for pipe attribute: Row and editText-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:textAppearance="@style/SectionText"
        android:text="@string/pipe_row"/>
    <EditText
        android:id="@+id/edit_row"
        android:hint="@string/pipe_row_hint"
        android:paddingLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--Displays the text for pipe attribute: depth and editText-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:textAppearance="@style/SectionText"
        android:text="@string/pipe_depth"/>

    <EditText
        android:id="@+id/edit_depth"
        android:hint="@string/pipe_depth_hint"
        android:paddingLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--Displays the text for pipe attribute: length and editText-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:textAppearance="@style/SectionText"
        android:text="@string/pipe_length"/>
    <EditText
        android:id="@+id/edit_length"
        android:hint="@string/pipe_length_hint"
        android:paddingLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>