<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.heavyconnect.heavyconnect.EquipmentRegisterActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent"
        android:id="@+id/linearLayout"

        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equip_reg_title"
            android:textSize="12pt"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="#000000"
            android:fontFamily="sans-serif-light">
        </TextView>

        <!--Name-->
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/equip_reg_name"
            android:id="@+id/editEquipNameTitle"
            android:textStyle="normal"
            android:textColor="#000000"
            android:fontFamily="sans-serif"/>

        <EditText
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="15"
            android:hint="@string/equip_reg_name_hint"
            android:id="@+id/editEquipName"
            android:layout_marginBottom="5dp"
            android:textColor="#000000"
            />

        <!--Model-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/equip_reg_model"
            android:id="@+id/editEquipModelTitle"
            android:textStyle="normal"
            android:textColor="#000000"
            android:fontFamily="sans-serif"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/equip_reg_model_hint"
            android:ems="15"
            android:id="@+id/editEquipModel"
            android:layout_marginBottom="5dp" />

        <!--Asset-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/equip_reg_asset"
            android:id="@+id/editEquipAssetlTitle"
            android:textStyle="normal"
            android:textColor="#000000"
            android:fontFamily="sans-serif"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/equip_reg_asset_hint"
            android:ems="15"
            android:id="@+id/editEquipAsset"
            android:layout_marginBottom="5dp" />

        <!--Hours-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/equip_reg_hour"
            android:id="@+id/editEquipHoursTitle"
            android:textStyle="normal"
            android:textColor="#000000"
            android:fontFamily="sans-serif"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/equip_reg_hour_hint"
            android:ems="15"
            android:id="@+id/editEquipHours"
            android:layout_marginBottom="5dp" />

        <!--Status-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/equip_reg_status"
            android:id="@+id/editEquipStatusTitle"
            android:textStyle="normal"
            android:textColor="#000000"
            android:fontFamily="sans-serif"/>

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equip_reg_status_ok"
                android:layout_weight="0.33"
                android:id="@+id/equip_reg_status_ok_radio"
                android:textColor="@color/regular_green"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equip_reg_status_service"
                android:layout_weight="0.33"
                android:id="@+id/equip_reg_status_service_radio"
                android:textColor="@color/regular_yellow"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equip_reg_status_broken"
                android:layout_weight="0.33"
                android:id="@+id/equip_reg_status_broken_radio"
                android:textColor="@color/regular_red" />
        </RadioGroup>

        <!--Buttons-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equip_reg_btn_clf"
                android:id="@+id/equipRegBtnClf"
                android:layout_weight="0.5"
                android:textAlignment="center"
                android:background="@color/regular_green"
                android:textColor="@color/white" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equip_reg_btn_reg"
                android:id="@+id/button2"
                android:textAlignment="center"
                android:layout_weight="0.5"
                android:textColor="@color/white"
                android:background="@color/regular_green"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
