<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GridActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/grid_farm"
        android:padding="@dimen/activity_margin"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="4dp"
                android:id="@+id/grid_equip">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#000"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/grid_equipment"
                    android:gravity="center"
                    android:layout_marginTop="4dp"
                    android:singleLine="true"
                    android:textSize="16sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="4dp"
                android:layout_marginLeft="16dp"
                android:id="@+id/grid_map">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#000"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/grid_map"
                    android:gravity="center"
                    android:layout_marginTop="4dp"
                    android:singleLine="true"
                    android:textSize="16sp"/>
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="4dp"
                android:id="@+id/grid_settings">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#000"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/grid_settings"
                    android:gravity="center"
                    android:layout_marginTop="4dp"
                    android:singleLine="true"
                    android:textSize="16sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="4dp"
                android:id="@+id/grid_exit"
                android:layout_marginLeft="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#000"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/grid_exit"
                    android:gravity="center"
                    android:layout_marginTop="4dp"
                    android:singleLine="true"
                    android:textSize="16sp"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:background="#000"
        android:layout_alignParentBottom="true"
        android:id="@+id/grid_farm" />

</RelativeLayout>
